unpackaged/main/default/objects/Quote/fields/Discount_Monetary__c.field-meta.xml
<CustomField>
    <fullName>Discount_Monetary__c</fullName>
    <formula>(Total_Rate_Card_Price__c -  TotalPrice)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>