unpackaged/main/default/objects/Quote/fields/Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent__c</fullName>
    <formula>IF(Total_Rate_Card_Price__c &gt; TotalPrice,(Discount_Monetary__c/Total_Rate_Card_Price__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>