unpackaged/main/default/objects/Quote/fields/Total_Rate_Card_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Rate_Card_Price__c</fullName>
    <label>Total Rate Card Price</label>
    <summarizedField>QuoteLineItem.Rate_Card_Price_1__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>